🎉  Release the version 1.0.0

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -38,8 +38,8 @@ const year = date.getFullYear();
       </div>
       <div class="bottom">
         <div class="copyright">
-          {`2018-${year}  ${SITE_NAME}`} 
-          <a href="//github.com/austin2035/astro-air-blog">Astro Air Blog</a>
+          &copy; {`2018-${year}  ${SITE_NAME}`} 
+          <a href="//github.com/austin2035/astro-air-blog">astro-air-blog</a>
         </div>
       </div>
     </div>
