add priview image

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,7 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import "../styles/global.css";
-const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
+const { title, description, image = "/preview.png" } = Astro.props;
 import { SITE_URL } from "../consts";
 const { pathname } = Astro.url;
 ---
