fix the button of more article

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,10 +56,9 @@ allPosts.sort((a, b) => Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontma
             );
           })
         }
- 
       </ul>
       <div class="view-archive-wrapper">
-        <a href="/newsroom/archive/" class="cta-primary-light" data-analytics-region="router" data-analytics-title="view archive">阅读历史文章</a>
+        <a href="/archive" class="cta-primary-light" data-analytics-region="router" data-analytics-title="view archive">阅读历史文章</a>
       </div>
     </div>
   </section>
