PATCH: modified header and footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,9 +18,8 @@ const year = date.getFullYear();
 
           <div class="item products">
             <div class="item-title">作品</div>
-            <a href="/" target="_blank">本站</a>
-            <a href="https://the.top" target="_blank">TOP Link</a>
-            <a href="https://news.the.top" target="_blank">TOP News</a>
+            <a href="/" target="_blank">本站博客</a>
+            <a href="https://the.top" target="_blank">TOP Link</a> 
           </div>
 
           <div class="item community">
@@ -29,17 +28,19 @@ const year = date.getFullYear();
             <a href="https://github.com/austin2035" target="_blank">Github</a>
             <a href="https://t.me/austin2035" target="_blank">Telegram</a>
           </div>
-
+          
           <div class="item resources">
             <div class="item-title">友链</div>
-            <a href="https://the.top">THE.TOP</a>
+            <a href="https://the.top" target="_blank">THE.TOP</a>
+            <a href="https://yufengbiji.com" target="_blank">驭风笔记</a>
           </div>
+
         </div>
       </div>
       <div class="bottom">
         <div class="copyright">
-          &copy; {`2018-${year}  ${SITE_NAME}`} 
-          <a href="//github.com/austin2035/astro-air-blog">astro-air-blog</a>
+          &copy; {`${year} ${SITE_NAME}`} 
+          <a href="//github.com/austin2035/astro-air-blog">Astro-air-blog</a>
         </div>
       </div>
     </div>
