--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <h2 class="tag-header">关于我</h2>
         <div class="tag-post-list">
           <ul>
-            <li>爱看老高</li>
+            <li>一个学生</li>
             <li>爱折腾</li>
             <li>爱音乐</li>
           </ul>
@@ -25,28 +25,6 @@ import BaseLayout from "../layouts/BaseLayout.astro";
             </li>
             <li>
               <a href="https://github.com/austin2035" target="_blank">Github</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="archive-tag">
-        <h2 class="tag-header">随想</h2>
-        <div class="tag-post-list">
-          <ul>
-            <li>我常常将人看做机器，他输出了什么，常常取决于他输入了什么。</li>
-            <li>屏蔽垃圾输入，寻求优质信息源， 才能输出优质信息。</li>
-            <li>看到这，你已经被我的观念输入一遍了。</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="archive-tag">
-        <h2 class="tag-header">一些作品</h2>
-        <div class="tag-post-list">
-          <ul>
-            <li>
-              有点多，我下次整理一下。
             </li>
           </ul>
         </div>
