Optimization: SEO Enhancement

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,12 +2,12 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANG} from "../consts";
 const { primaryTitle } = Astro.props;
 const title = primaryTitle ? `${primaryTitle}  -  ${SITE_TITLE}`  : SITE_TITLE;
 ---
 
-<html class="js no-touch  progressive-image  no-reduced-motion progressive" lang="zh-CN" dir="ltr">
+<html class="js no-touch  progressive-image  no-reduced-motion progressive" lang={SITE_LANG} dir="ltr">
   <head>
     <BaseHead title={title} description={SITE_DESCRIPTION} />
   </head>
